# MATH5030-Numerical-Methods-in-Finance

./: .gitignore  LICENSE  README.md  models.py  pyproject.toml  run_benchmarks.py  utils.py
experiments/: run_adaptive.py  run_greeks.py  run_validation.py
notebooks/: demo.ipynb
results/tables/: adaptive_selection.csv  arithmetic_validation.csv  efficiency.csv  greeks_comparison.csv  pyfeng_convergence.csv  robustness_edge_cases.csv  robustness_monotonicity.csv  robustness_random.csv
src/asian_option_pricer/: __init__.py  adaptive.py  analytic.py  benchmarks.py  control_variate.py  greeks.py  models.py  monte_carlo.py  paths.py  qmc.py  utils.py
tests/: test_adaptive.py  test_analytic.py  test_greeks.py  test_monte_carlo.py  test_paths.py  test_robustness.py
